<resources>
    <string name="app_name">Vibes</string>
    <string name="string_chat_user_name">Sarthak</string>
    <string name="string_send">Send</string>
    <string name="string_add_chat">Type in</string>
    <string name="string_email_login_screen_title">Login to Vibes</string>
    <string name="string_hint_password">Password</string>
    <string name="string_login_into_vibes">Login</string>
    <string name="string_email_sign_up_title">New User? Sign Up</string>
    <string name="string_hint_email">Email</string>
    <string name="string_error">Something went wrong</string>
    <string name="string_email_signup_screen_title">Signup with Vibes</string>
    <string name="string_hint_name">Full Name</string>
    <string name="string_password_length_error">Password must be atleast 6 characters</string>
    <string name="string_email_format_error">Enter a valid Email Address</string>
    <string name="string_name_length_error">Name cannot be less than 3 characters</string>
    <string name="string_sign_up_vibes">Signup</string>
    <string name="string_email_already_registered_title">Already Registered? Login</string>
    <string name="string_error_no_network">Network Not Available</string>
    <string name="string_hint_twitter_username">Twitter Username</string>
    <string name="string_chat_options">Who do you want to Chat with?</string>
    <string name="string_chat_with_user">User Chat</string>
    <string name="string_chat_volunteer_chat">Volunteer Chat</string>
    <string name="string_chat_with_admin">Chat with Therapist</string>
    <string name="string_text_chat_interesting">Good Chat and then things could never go wrong!</string>
    <string name="string_reach_user">New Chat</string>
    <string name="string_text_new_chat">Looking for a New Chat?</string>

</resources>
