<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:elevation="@dimen/dimen_2dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <hackwestern.hack.com.hackwestern.widgets.AppTextView
                android:id="@+id/textToolbarChats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/string_chat_options"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/dimen_19sp"
                app:textStyle="@integer/PT_SANS_WEB_REGULAR" />
        </android.support.v7.widget.Toolbar>

        <hackwestern.hack.com.hackwestern.widgets.AppTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:ems="13"
            android:gravity="center"
            android:paddingBottom="@dimen/dimen_20dp"
            android:paddingLeft="@dimen/dimen_20dp"
            android:paddingRight="@dimen/dimen_20dp"
            android:paddingTop="@dimen/dimen_20dp"
            android:text="@string/string_text_chat_interesting"
            android:textSize="@dimen/dimen_25sp"
            app:textStyle="@integer/PT_SANS_WEB_REGULAR" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <hackwestern.hack.com.hackwestern.widgets.AppButton
                android:id="@+id/buttonUserChat"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_55dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:layout_marginLeft="@dimen/dimen_40dp"
                android:layout_marginRight="@dimen/dimen_40dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:background="@drawable/selector_rounded_white_button"
                android:text="@string/string_chat_with_user"
                android:textAllCaps="false"
                android:textColor="@color/color_black"
                android:textSize="@dimen/dimen_20sp"
                app:textStyle="@integer/OPEN_SANS_REGULAR" />

            <hackwestern.hack.com.hackwestern.widgets.AppButton
                android:id="@+id/buttonVolunteerChat"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_55dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:layout_marginLeft="@dimen/dimen_40dp"
                android:layout_marginRight="@dimen/dimen_40dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:background="@drawable/selector_rounded_white_button"
                android:text="@string/string_chat_volunteer_chat"
                android:textAllCaps="false"
                android:textColor="@color/color_black"
                android:textSize="@dimen/dimen_20sp"
                app:textStyle="@integer/OPEN_SANS_REGULAR" />

            <hackwestern.hack.com.hackwestern.widgets.AppButton
                android:id="@+id/buttonTherapist"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_55dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:layout_marginLeft="@dimen/dimen_40dp"
                android:layout_marginRight="@dimen/dimen_40dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:background="@drawable/selector_rounded_white_button"
                android:text="@string/string_chat_with_admin"
                android:textAllCaps="false"
                android:textColor="@color/color_black"
                android:textSize="@dimen/dimen_20sp"
                app:textStyle="@integer/OPEN_SANS_REGULAR" />
        </LinearLayout>
    </LinearLayout>

    <include
        layout="@layout/layout_progress_bar_white_full_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:visibility="gone"
        tools:visibility="visible" />
</RelativeLayout>
